objects/nBRIDGER__OFAC_Match__c.object
<CustomObject>
    <fields>
        <fullName>nBRIDGER__BirthDate__c</fullName>
        <label>BirthDate</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nBRIDGER__Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nBRIDGER__Gender__c</fullName>
        <label>Gender</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nBRIDGER__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nBRIDGER__Nationality__c</fullName>
        <label>Nationality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nBRIDGER__OFAC_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OFAC_Request</label>
        <referenceTo>nBRIDGER__OFAC_Request__c</referenceTo>
        <relationshipLabel>OFAC_Matches</relationshipLabel>
        <relationshipName>OFAC_Matches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nBRIDGER__Place_Of_Birth__c</fullName>
        <label>Place_Of_Birth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nBRIDGER__Score__c</fullName>
        <label>Score</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nBRIDGER__Watchlist__c</fullName>
        <label>Watchlist</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OFAC_Match</label>
    <nameField>
        <label>OFAC_Match Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OFAC_Matches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>